Some boring caption stuff

--- a/Conclusion/Conclusion.tex
+++ b/Conclusion/Conclusion.tex
@@ -65,7 +65,8 @@ of the scenarios that predict them.
 \begin{center}
 \includegraphics[width=0.7\textwidth]{./Conclusion/Figures/scenario_comp2.pdf}
 \end{center}
-\caption{The expected exclusion in the $m_{h}^{\text{mod+}}$ scenario
+\caption[The expected exclusion in the $m_{h}^{\text{mod+}}$ scenario
+at 95\% CL of the 2015 MSSM analysis, projected to an integrated luminosity of 300-3000 fb$^{-1}$.]{The expected exclusion in the $m_{h}^{\text{mod+}}$ scenario
  at 95\% CL of the 2015 MSSM analysis (pink)
 projected to an integrated luminosity of 300 fb$^{-1}$ (blue) and 3000 fb$^{-1}$ (red)
 under several assumptions of how the systematic uncertainties scale. Even with an integrated 
