--- a/Detector/Detector.tex
+++ b/Detector/Detector.tex
@@ -15,7 +15,7 @@ of protons are individually accelerated. In addition to colliding beams of proto
 is also used for proton--lead and lead--lead collisions.
 \begin{figure}[h!]
 \includegraphics[width=\textwidth]{./Detector/Plots/LHC_default.jpg}
-\caption{Schematic of the \ac{CERN} accelerator complex \cite{lhc-schematic}.}
+\caption[Schematic of the CERN accelerator complex.]{Schematic of the \ac{CERN} accelerator complex \cite{lhc-schematic}.}
 \label{fig:lhc_schematic}
 \end{figure}
 The \ac{LHC} does not operate on its own: the protons are fed into
@@ -57,7 +57,8 @@ factor due to the crossing angle.
 
 \begin{figure}[h!]
 \includegraphics[width=0.5\textwidth]{./Detector/Plots/crosssections2013.jpg}
-\caption{Total proton-proton cross section, and the cross-sections
+\caption[Total proton-proton cross section, and the cross-sections for
+several processes studied at the LHC.]{Total proton-proton cross section, and the cross-sections
 for several processes studied at the LHC \cite{stirling-crosssection}.
 The cross sections of these processes
 are often many orders of magnitude smaller than the total p--p cross section.}
@@ -74,7 +75,8 @@ figure \ref{fig:CMSLHC_intlumi}.
 
 \begin{figure}[h!]
 \includegraphics[width=0.85\textwidth]{./Detector/Plots/int_lumi_cumulative_pp_2.pdf}
-\caption{Cumulative integrated luminosity delivered to \ac{CMS} for p--p collisions at the \ac{LHC}, separated
+\caption[Cumulative integrated luminosity delivered to CMS
+for p--p collisions at the LHC, separated by running year.]{Cumulative integrated luminosity delivered to \ac{CMS} for p--p collisions at the \ac{LHC}, separated
 by running year \cite{cms-lumi-public}.}
 \label{fig:CMSLHC_intlumi}
 \end{figure}
@@ -122,7 +124,7 @@ The detector is 21.6 m long, 14.6 m in diameter, and weighs
 in figure \ref{fig:cms_detector}.
 \begin{figure}[h!]
 \includegraphics[width=0.8\textwidth]{./Detector/Plots/cms.png}
-\caption{A cutaway view of the \ac{CMS} detector \cite{cms-jinst}, indicating the
+\caption[A cutaway view of the CMS detector, indicating the different sub-parts of the detector.]{A cutaway view of the \ac{CMS} detector \cite{cms-jinst}, indicating the
 different sub-parts of the detector.}
 \label{fig:cms_detector}
 \end{figure}
@@ -191,9 +193,11 @@ provide three precies position measurements along each charged particle trajecto
 \begin{figure}[h!]
 \begin{center}
 \includegraphics[width=0.9\textwidth]{./Detector/Plots/Tracker.png}
-\caption{Schematic of the CMS tracker in the r-z plane, indicating the
+\caption[Schematic of the CMS tracker in the 
+r-z plane, indicating the positions of the pixel and
+strip detectors.]{Schematic of the CMS tracker in the r-z plane, indicating the
 positions of the pixel and strip detectors \cite{cms-jinst}. Each line 
-on the plot represents a detector module}
+on the plot represents a detector module.}
 \label{fig:CMS_tracker}
 \end{center}
 \end{figure}
@@ -278,7 +282,8 @@ total thickness of the preshower is 3 radiation lengths.
 \begin{figure}[h!]
 \begin{center}
 \includegraphics[width=0.9\textwidth]{./Detector/Plots/ECAL.png}
-\caption{Layout of the \ac{ECAL}, indicating the position of the
+\caption[Layout of the ECAL, indicating the positions
+of the different components.]{Layout of the \ac{ECAL}, indicating the position of the
 different components \cite{cms-jinst}.}
 \label{fig:CMS_ECAL}
 \end{center}
@@ -324,7 +329,8 @@ in figure \ref{fig:CMS_HCAL}.
 \begin{figure}[h!]
 \begin{center}
 \includegraphics[width=0.9\textwidth]{./Detector/Plots/HCAL.png}
-\caption{Illustration of a quadrant of the \ac{HCAL}, showing the different
+\caption[Illustration of a quadrant of the HCAL, showing the different
+subsystems of the detector.]{Illustration of a quadrant of the \ac{HCAL}, showing the different
 subsystems of the detector \cite{cms-jinst}.}
 \label{fig:CMS_HCAL}
 \end{center}
@@ -401,7 +407,8 @@ additional layers of \ac{CSCs} and \ac{RPCs}.
 \begin{figure}[h!]
 \begin{center}
 \includegraphics[width=0.8\textwidth]{./Detector/Plots/MuonSystemUpgrade.png}
-\caption{Cross-section of one quadrant of the CMS detector, indicating
+\caption[Cross-section of one quadrant of the CMS detector,
+indicating the positions of the different muon system components.]{Cross-section of one quadrant of the CMS detector, indicating
 the positions of the different muon system components \cite{cms-muon-upgrade}. The 
 fourth muon endcap stations were extended during \ac{LS1}, in Run 1 only the lower
 part existed.}
@@ -476,7 +483,7 @@ An overview of the data flow in the \ac{L1} trigger is given in figure \ref{fig:
 \begin{figure}[h!]
 \begin{center}
 \includegraphics[width=0.7\textwidth]{./Detector/Plots/CMSTrigger.png}
-\caption{Schematic of the different components of the \ac{L1} trigger \cite{cms-trigger-tdr}.}
+\caption[Schematic of the different components of the L1 trigger.]{Schematic of the different components of the \ac{L1} trigger \cite{cms-trigger-tdr}.}
 \label{fig:CMS_Trigger}
 \end{center}
 \end{figure}
