--- a/MSSM/MSSM.tex
+++ b/MSSM/MSSM.tex
@@ -120,7 +120,9 @@ corresponds to an integrated luminosity of 2.3 fb$^{-1}$.
 \subfloat[Muon \pT]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/pt_1_inclusive_mt_2016.pdf}}
 \subfloat[Electron $\eta$]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/eta_1_inclusive_et_2016.pdf}}
 \end{center}
-\caption{(a) \pT~of the muon in the \mutau channel and (b) $\eta$ of the electron in the \etau channel.
+\caption[The \pT~of the muon in the \mutau channel
+and $\eta$ of the electron in the \etau channel, with the signal
+overlaid.]{(a) \pT~of the muon in the \mutau channel and (b) $\eta$ of the electron in the \etau channel.
 The gluon fusion (dashed blue line)
 and b-associated (dashed purple line) signals are overlaid. The signals are normalised to 4000 times their
 cross-section times branching ratio at \mA=1 TeV and \tanb=50 in the $m_{h}^{\text{mod+}}$ scenario.}
@@ -224,8 +226,11 @@ driven mostly by simplicity and consistency with other \ac{CMS} analyses.
 \subfloat[$S/\sqrt{B}$]{\includegraphics[width=0.7\textwidth]{./MSSM/Figures/s_over_root_b_mt_m.png}}~\\
 \subfloat[Size of error interval]{\includegraphics[width=0.7\textwidth]{./MSSM/Figures/mt_muons_iso_errint.png}}
 \end{center}
-\caption{(a) The $S/\sqrt{B}$ for \Ztautau signal and (b) the size of the error interval on 
-the best--fit value of a maximum--likeihood fit to the \Ztautau signal strength,
+\caption[The $S/\sqrt{B}$ for \Ztautau signal and
+the size of the error interval on the best--fit value of a
+maximum--likelihood fit to the \Ztautau signal strength, for various 
+isolation selections.]{(a) The $S/\sqrt{B}$ for \Ztautau signal and (b) the size of the error interval on 
+the best--fit value of a maximum--likelihood fit to the \Ztautau signal strength,
 for various selections of the $\Delta\beta$--corrected
 isolation variable with a cone size of $\Delta R = 0.4$ (solid circles), 
 the $\Delta\beta$--corrected isolation variable with a cone size of $\Delta R = 0.3$ (open circles),
@@ -259,7 +264,9 @@ tau isolation working point selection on both the gg$\phi$ and bb$\phi$ producti
 %\subfloat[$m_{\phi} = 1600$ GeV]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/optimisation_ggh_mt_1600_range12.pdf}}
 %\subfloat[$m_{\phi} = 2900$ GeV]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/optimisation_ggh_mt_2900_range12.pdf}}
 \end{center}
-\caption{Pre--fit expected limit on $\sigma\times$BR for the gg$\phi$ production process with decay into $\Pgt\Pgt$,
+\caption[Pre--fit expected limit on $\sigma\times$BR for the gg$\phi$
+production process with decay into $\Pgt\Pgt$ as a function of tau isolation 
+working point and \mT~selection, for two mass points.]{Pre--fit expected limit on $\sigma\times$BR for the gg$\phi$ production process with decay into $\Pgt\Pgt$,
 as a function of tau isolation working point (from very loose to very very tight) and
 of \mT~selection from \mT$<20$ GeV to \mT$<40$ GeV, normalised to the best limit in the plane, indicated by the asterisk. This is shown
 for (a) $m_{\phi}$ = 160 GeV and (b) $m_{\phi}$ = 2.9 TeV. The most optimal combination of \mT~selection and 
@@ -272,7 +279,11 @@ hadronic tau isolation working point varies, with looser selections preferred at
 \subfloat[gg$\phi$]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mssm_gradcuts_ggH_mt.pdf}}
 \subfloat[bb$\phi$]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mssm_gradcuts_bbH_mt.pdf}}
 \end{center}
-\caption{Pre-fit expected limits on $\sigma \times$ BR in the \mutau channel for (a) gg$\phi$ and
+\caption[Pre-fit expected limits on $\sigma \times$ BR for the gg$\phi$ and bb$\phi$
+processes
+in the
+\mutau channel for an increasingly looser \mT~selection and tau isolation
+working point.]{Pre-fit expected limits on $\sigma \times$ BR in the \mutau channel for (a) gg$\phi$ and
 (b) bb$\phi$ production, for an increasingly looser \mT~selection and tau isolation working point, starting
 at the tight working point and \mT$<30$ GeV in green, the medium working point and \mT$<40$ GeV in red,
 the loose working point and \mT$<50$ GeV in blue and the very loose working point and \mT$<60$ GeV in black. Loosening
@@ -312,7 +323,9 @@ less pronounced.
 \subfloat[gg$\phi$]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mssm_optimisation_mediummt40_vs_tightmt30pt20_mt_ggH_remake.pdf}}
 \subfloat[bb$\phi$]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mssm_optimisation_mediummt40_vs_tightmt30pt20_mt_bbH_remake.pdf}}
 \end{center}
-\caption{Pre-fit expected limits on $\sigma\times$BR in the \mutau channel for (a) gg$\phi$ production and (b) bb$\phi$ production. The
+\caption[Pre-fit expected limits on $\sigma\times$BR in the
+\mutau channel for gg$\phi$ and bb$\phi$ prouduction, comparing
+different hadronic tau \pT~cuts.]{Pre-fit expected limits on $\sigma\times$BR in the \mutau channel for (a) gg$\phi$ production and (b) bb$\phi$ production. The
 limits when using the medium hadronic tau isolation working point and \mT$<40$ GeV selection using a minimum
 hadronic tau \pT~selection of 20 GeV (red circles), 30 GeV (blue circles) and 40 GeV (black circles) are shown. The green
 circles show the limits using tighter tau isolation working point and \mT~selection. The limits on
@@ -360,7 +373,9 @@ tau isolation criteria. This is illustrated in figure \ref{fig:mssm_tauptcut_et}
 \subfloat[gg$\phi$]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mssm_gradcuts_ggH_et.pdf}}
 \subfloat[bb$\phi$]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mssm_gradcuts_bbH_et.pdf}}
 \end{center}
-\caption{Pre-fit expected limits on $\sigma \times$ BR in the \etau channel for (a) gg$\phi$ and
+\caption[Pre-fit expected limits on $\sigma\times$ BR in the \etau
+channel for gg$\phi$ and bb$\phi$ production for an increasingly
+looser \mT~selection and tau isolation working point.]{Pre-fit expected limits on $\sigma \times$ BR in the \etau channel for (a) gg$\phi$ and
 (b) bb$\phi$ production, for an increasingly looser \mT~selection and tau isolation working point, starting
 at the tight working point and \mT$<40$ GeV in green, the medium working point and \mT$<50$ GeV in red,
 the loose working point and \mT$<60$ GeV in blue and the very loose working point and \mT$<70$ GeV in black. Loosening
@@ -373,7 +388,9 @@ degrades them at low mass.}
 \subfloat[gg$\phi$]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mssm_optimisation_mediummt50_vs_tightmt40pt20_et_ggH_remake.pdf}}
 \subfloat[bb$\phi$]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mssm_optimisation_mediummt50_vs_tightmt40pt20_et_bbH_remake.pdf}}
 \end{center}
-\caption{Pre-fit expected limits on $\sigma\times$BR in the \etau channel for (a) gg$\phi$ production and (b) bb$\phi$ production. The
+\caption[Pre-fit expected limits on $\sigma\times$BR in the \etau
+channel for gg$\phi$ and bb$\phi$ production comparing different
+hadronic tau isolation cuts.]{Pre-fit expected limits on $\sigma\times$BR in the \etau channel for (a) gg$\phi$ production and (b) bb$\phi$ production. The
 limits using the medium hadronic tau isolation working point and \mT$<40$ GeV selection using a minimum
 hadronic tau \pT~cut of 20 GeV (red circles), 30 GeV (blue circles) and 40 GeV (black circles) are shown. The green
 circles show the limits using tighter tau isolation working point and \mT~selection. The limits on
@@ -401,7 +418,9 @@ This is illustrated in figure \ref{fig:mssm_tauid_tt} for the gg$\phi$ process.
 \subfloat[gg$\phi$]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mssm_thesis_ttopt_ggH.pdf}}
 \subfloat[bb$\phi$]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mssm_thesis_ttopt_bbH.pdf}}
 \end{center}
-\caption{Expected upper limits for (a) the gg$\phi$ process and (b) the bb$\phi$ process 
+\caption[Expected upper limits for the gg$\phi$ and bb$\phi$ process
+in the \tautau channel, comparing different hadronic tau isolation working
+points.]{Expected upper limits for (a) the gg$\phi$ process and (b) the bb$\phi$ process 
 in the \tautau channel, using the 
 medium (green), tight (red) and very tight working point of the tau isolation discriminator.
 The pattern is roughly the same as in the \etau and \mutau channels, with looser selections preferred at high
@@ -461,7 +480,8 @@ events.
 \subfloat[Reconstruction of $D_{\zeta}$]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/PZeta.pdf}}
 \subfloat[$D_{\zeta}$ distribution in \emu channel]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/pzeta_inclusive_em_2016.pdf}}
 \end{center}
-\caption{(a) reconstruction of $D_{\zeta}$ \cite{cdf-dzeta} and (b) $D_{\zeta}$ distribution in the 
+\caption[Reconstruction of the $D_{\zeta}$ variable and the $D_{\zeta}$ distribution
+in the \emu channel.]{(a) reconstruction of $D_{\zeta}$ \cite{cdf-dzeta} and (b) $D_{\zeta}$ distribution in the 
 \emu channel\cite{CMS-PAS-HIG-16-037}.}
 \label{fig:mssm_dzeta}
 \end{figure}
@@ -478,7 +498,8 @@ based on the number of b--tagged jets in the event.
 \subfloat[Number of jets]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/n_jets_inclusive_mt_2016_log.pdf}}
 \subfloat[Number of b--tagged jets]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/n_bjets_inclusive_mt_2016_log.pdf}}
 \end{center}
-\caption{(a) Number of jets and (b) number of b--tagged jets in the \mutau channel. The gluon fusion signal (dashed
+\caption[Number of jets and number of b-tagged jets in the \mutau channel, 
+with the signal overlaid.]{(a) Number of jets and (b) number of b--tagged jets in the \mutau channel. The gluon fusion signal (dashed
 blue line) and b--associated signal (dashed purple line) are overlaid on the expected background distribution. The signals
 are normalised to 100 times their cross--section times branching ratio at \mA=1 TeV and \tanb=50 in the $m_{\text{h}}^{\text{mod+}}$
 scenario. We can see how the signal--sensitive bins motivate the choice of categories.}
@@ -551,7 +572,9 @@ the b-associated production signal at the same three masses overlaid.
 \subfloat[QCD and signal in \tautau no b-tag]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mttot_sigsep_tt_nobtag.pdf}}
 \subfloat[\ttbar and signal in \emu b-tag]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mttot_sigsep_em_btag.pdf}}
 \end{center}
-\caption{Total transverse mass distributions in (a) the no b-tag category of the \tautau
+\caption[Total transverse mass distributions in the no b-tag category of the
+\tautau channel for QCD and gluon fusion signal, and in the b-tag category
+of the \emu channel, for \ttbar and b-associated signal.]{Total transverse mass distributions in (a) the no b-tag category of the \tautau
 channel, for QCD and gluon fusion signal at 400 GeV and 1 and 2 TeV overlaid and (b) in the b-tag
 category of the \emu channel, for \ttbar and b-associated signal at 400 GeV and 1 and 2 TeV. 
 The total transverse mass variable separates the signal and these backgrounds well.}
@@ -629,7 +652,8 @@ by applying the top quark \pT~reweighting is illustrated in figure \ref{fig:mssm
 \subfloat[Without top-quark \pT~reweighting]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mt_tot_ttcontrol_em_2016_notoppt.png}}
 \subfloat[With top-quark \pT~reweighting]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mt_tot_ttcontrol_em_2016.png}}
 \end{center}
-\caption{\mTtot~distribution in the \ttbar enriched control region \MET>80 GeV and $D_{\zeta}<-20$ GeV in the \emu channel,
+\caption[\mTtot~distribution in the \ttbar
+enriched control region, with and without applying top quark \pT~reweighting.]{\mTtot~distribution in the \ttbar enriched control region \MET>80 GeV and $D_{\zeta}<-20$ GeV in the \emu channel,
 (a) without applying top quark \pT~reweighting and (b) with top quark \pT~reweighting.
 The uncertainty band includes the statistical uncertainty as well as a 6\% \ttbar cross--section uncertainty.}
 \label{fig:mssm_corrs_toppt}
@@ -653,7 +677,9 @@ shape in the no b-tag category of the \etau channel is shown in figure \ref{fig:
 \subfloat[\Zmm events]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/pt_tt_inclusive_zmm_2016_log_noweight.png}}
 \subfloat[Effect of Drell-Yan shape reweighting on \Ztautau background]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mttot_zttweight_et_nobtag.pdf}}
 \end{center}
-\caption{(a) The mismodelling in the \PZ \pT~distribution as observed
+\caption[The mismodelling in the \PZ \pT~distribution as observed
+in \Zmm events, and the impact of applying the Drell-Yan shape reweighting
+on the total transverse mass distribution of the \Ztautau background in the no b-tag category of the \etau channel.]{(a) The mismodelling in the \PZ \pT~distribution as observed
 in \Zmm events, used to derive the correction and (b) the impact of applying the Drell-Yan shape
 reweighting on the total transverse
 mass distribution of the \Ztautau background in the no b-tag category of the \etau channel.}
@@ -694,7 +720,8 @@ background as the `Electroweak' component.
 \subfloat[\mutau no b-tag]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/CMS-PAS-HIG-16-037_Figure-aux_001-a.pdf}}
 \subfloat[\emu b-tag]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/CMS-PAS-HIG-16-037_Figure-aux_003-b.pdf}}
 \end{center}
-\caption{The low $m_{\text{T}}^{\text{tot}}$ region in (a) the 
+\caption[The low \mTtot~region in the no b-tag category of the \mutau channel 
+and in the b-tag category of the \emu channel.]{The low $m_{\text{T}}^{\text{tot}}$ region in (a) the 
 no b-tag category of the \mutau channel and (b) the b-tag category of the \emu channel.
 This low $m_{\text{T}}^{\text{tot}}$ region is where the backgrounds
 are concentrated \cite{CMS-PAS-HIG-16-037-addit}.}
@@ -869,7 +896,8 @@ $\frac{N_{\text{W,MC}}^{\text{OS,low } m_{T},\text{b-tag category}}}{N_{\text{W,
 \subfloat[No b-tag]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/htt_et_10_shapes_postfit.pdf}}
 \subfloat[B-tag]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/htt_et_13_shapes_postfit.pdf}}
 \end{center}
-\caption{High-\mT~control region in the (a) no b-tag and (b) b-tag categories of the \etau
+\caption[High-\mT~control region in the no b-tag and b-tag
+categories of the \etau channel.]{High-\mT~control region in the (a) no b-tag and (b) b-tag categories of the \etau
 channel. In the no b-tag category the \Wjets background, drawn together with the small
  di-boson plus single-top backgrounds as the `electroweak' background component, dominates. In the b-tag
 category the \ttbar background is larger than the \Wjets background.}
@@ -908,7 +936,9 @@ in the no b-tag category.
 \subfloat[Pre-fit distribution]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/qcdosss_near_mt_1_prefit.png}}
 \subfloat[Post-fit distribution]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/qcdosss_near_mt_1_postfit.png}}
 \end{center}
-\caption{The visible mass distribution of the di-$\tau$ pair in the \mutau channel for the sideband near the signal region, (a) before
+\caption[The visible mass distribution of the di-$\tau$ pair
+in the \mutau channel for the sideband near the signal region, before
+and after the maximum likelihood fit to the QCD signal strength.]{The visible mass distribution of the di-$\tau$ pair in the \mutau channel for the sideband near the signal region, (a) before
 the maximum likelihood fit to the QCD signal strenght and (b) after the fit. The resulting fitted signal strength 
 is 1.180$\pm$0.044.}
 \label{fig:mssm_qcdosss_mtnear}
@@ -919,8 +949,10 @@ is 1.180$\pm$0.044.}
 \subfloat[Pre-fit distribution]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/qcdosss_far_mt_1_prefit.png}}
 \subfloat[Post-fit distribution]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/qcdosss_far_mt_1_postfit.png}}
 \end{center}
-\caption{The visible mass distribution of the di-$\tau$ pair in the \mutau channel for the sideband further away from the signal region, (a) before
-the maximum likelihood fit to the QCD signal strenght and (b) after the fit. The resulting fitted signal strength 
+\caption[The visible mass distribution of the di-$\tau$ pair in the
+\mutau channel for the sideband further away from the signal region,
+before and after the maximum likelihood fit to the QCD signal strength.]{The visible mass distribution of the di-$\tau$ pair in the \mutau channel for the sideband further away from the signal region, (a) before
+the maximum likelihood fit to the QCD signal strength and (b) after the fit. The resulting fitted signal strength 
 is 1.184$\pm$0.035.}
 \label{fig:mssm_qcdosss_mtfar}
 \end{figure}
@@ -930,8 +962,10 @@ is 1.184$\pm$0.035.}
 \subfloat[Pre-fit distribution]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/qcdosss_near_et_1_prefit.png}}
 \subfloat[Post-fit distribution]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/qcdosss_near_et_1_postfit.png}}
 \end{center}
-\caption{The visible mass distribution of the di-$\tau$ pair in the \etau channel for the sideband near the signal region, (a) before
-the maximum likelihood fit to the QCD signal strenght and (b) after the fit. The resulting fitted signal strength is 1.015$\pm$0.059.}
+\caption[The visible mass distribution of the di-$\tau$ pair in
+the \etau channel for the sideband near the signal region,
+before and after the maximum likelihood fit to the QCD signal strength.]{The visible mass distribution of the di-$\tau$ pair in the \etau channel for the sideband near the signal region, (a) before
+the maximum likelihood fit to the QCD signal strength and (b) after the fit. The resulting fitted signal strength is 1.015$\pm$0.059.}
 \label{fig:mssm_qcdosss_etnear}
 \end{figure}
 
@@ -940,7 +974,10 @@ the maximum likelihood fit to the QCD signal strenght and (b) after the fit. The
 \subfloat[Pre-fit distribution]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/qcdosss_far_et_1_prefit.png}}
 \subfloat[Post-fit distribution]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/qcdosss_far_et_1_postfit.png}}
 \end{center}
-\caption{The visible mass distribution of the di-$\tau$ pair in the \etau channel for the sideband further away from the signal region, (a) before
+\caption[The visible mass distribution of the di-$\tau$ pair
+in the \etau channel for the sideband further away from the signal
+region, before and after the maximum likelihood fit to the QCD signal 
+strength.]{The visible mass distribution of the di-$\tau$ pair in the \etau channel for the sideband further away from the signal region, (a) before
 the maximum likelihood fit to the QCD signal strenght and (b) after the fit. The resulting fitted signal strength
 is 1.127$\pm$0.045.}
 \label{fig:mssm_qcdosss_etfar}
@@ -1237,7 +1274,9 @@ is much smaller.
 \subfloat[gg$\phi$ signal at $m_{\phi} = 3.2$ TeV]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/highpT_tauID_comp_tt_nobtag_ggh3200.pdf}}
 \subfloat[\Ztautau background]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/highpT_tauID_comp_tt_nobtag_ZTT.pdf}}
 \end{center}
-\caption{Impact of the high-\pT~tau ID uncertainty in the no b-tag category of the
+\caption[Impact of the high-\pT~tau ID uncertainty in the no b-tag category
+of the \tautau channel for a high-mass signal sample and the \Ztautau
+background.]{Impact of the high-\pT~tau ID uncertainty in the no b-tag category of the
 \tautau channel for (a) a high-mass signal sample and (b) the \Ztautau background. The effect on the shape is much
 larger in the high-mass signal sample, which contains hadronically decaying taus with much higher
 \pT~than the \Ztautau sample.}
@@ -1398,7 +1437,7 @@ are very well separated, and the observation is compatible with the SM hypothesi
 \subfloat[\mA=1.2 TeV, \tanb=50]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/plot_mA_1200_tanb_50.png}}~\\
 \subfloat[\mA=700 GeV, \tanb=60]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/plot_mA_700_tanb_60.png}}
 \end{center}
-\caption{Probability density functions, obtained by generating a large number of toy datasets, for the SM and MSSM hypotheses at three different points in the $m_{\text{h}}^{\text{mod+}}$
+\caption[Probability density functions for the SM and MSSM hypotheses at three different points in the $m_{\text{h}}^{\text{mod+}}$ scenario.]{Probability density functions, obtained by generating a large number of toy datasets, for the SM and MSSM hypotheses at three different points in the $m_{\text{h}}^{\text{mod+}}$
 scenario, each with different levels of separation between the MSSM and SM distributions.}
 \label{fig:mssm_mssmvssm_toys}
 \end{figure}
@@ -1420,7 +1459,8 @@ observed at 125 GeV.
 \subfloat[no b-tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_005-a.pdf}}
 \subfloat[b-tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_005-b.pdf}}
 \end{center}
-\caption{Distributions of \mTtot~in the (a) no b-tag and (b) b-tag categories 
+\caption[Distributions of \mTtot~in the no b-tag and b-tag categories
+of the \mutau channel.]{Distributions of \mTtot~in the (a) no b-tag and (b) b-tag categories 
 of the \mutau channel. The signal of the 3 neutral Higgs bosons at \mA=1 TeV 
 and \tanb=50 in the $m_{h}^{mod+}$ scenario is overlaid. Note that, to incorporate
 the observed Higgs boson at 125 GeV, the $m_{h}^{mod+}$ scenario includes a h boson
@@ -1434,7 +1474,8 @@ the reason for the doubly--peaking shape of the overlaid signal \cite{CMS-PAS-HI
 \subfloat[no b-tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_006-a.pdf}}
 \subfloat[b-tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_006-b.pdf}}
 \end{center}
-\caption{Distributions of \mTtot~in the (a) no b-tag and (b) b-tag categories 
+\caption[Distributions of \mTtot~inthe no b-tag and b-tag 
+categories of the \etau channel.]{Distributions of \mTtot~in the (a) no b-tag and (b) b-tag categories 
 of the \etau channel. The signal of the 3 neutral Higgs bosons at \mA=1 TeV 
 and \tanb=50 in the $m_{h}^{mod+}$ scenario is overlaid \cite{CMS-PAS-HIG-16-037}.}% Note that, to incorporate
 %the observed Higgs boson at 125 GeV, the $m_{h}^{mod+}$ scenario includes a h boson
@@ -1448,7 +1489,8 @@ and \tanb=50 in the $m_{h}^{mod+}$ scenario is overlaid \cite{CMS-PAS-HIG-16-037
 \subfloat[no b-tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_008-a.pdf}}
 \subfloat[b-tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_008-b.pdf}}
 \end{center}
-\caption{Distributions of \mTtot~in the (a) no b-tag and (b) b-tag categories 
+\caption[Distributions of \mTtot~in the no b-tag and b-tag categories
+of the \tautau channel.]{Distributions of \mTtot~in the (a) no b-tag and (b) b-tag categories 
 of the \tautau channel. The signal of the 3 neutral Higgs bosons at \mA=1 TeV 
 and \tanb=50 in the $m_{h}^{mod+}$ scenario is overlaid \cite{CMS-PAS-HIG-16-037}.}% Note that, to incorporate
 %the observed Higgs boson at 125 GeV, the $m_{h}^{mod+}$ scenario includes a h boson
@@ -1462,8 +1504,9 @@ and \tanb=50 in the $m_{h}^{mod+}$ scenario is overlaid \cite{CMS-PAS-HIG-16-037
 \subfloat[no b-tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_007-a.pdf}}
 \subfloat[b-tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_007-b.pdf}}
 \end{center}
-\caption{Distributions of \mTtot~in the (a) no b-tag and (b) b-tag categories 
-of the \tautau channel. The signal of the 3 neutral Higgs bosons at \mA=1 TeV 
+\caption[Distributions of \mTtot~in the no b-tag and b-tag categories of 
+the \emu channel.]{Distributions of \mTtot~in the (a) no b-tag and (b) b-tag categories 
+of the \emu channel. The signal of the 3 neutral Higgs bosons at \mA=1 TeV 
 and \tanb=50 in the $m_{h}^{mod+}$ scenario is overlaid \cite{CMS-PAS-HIG-16-037}.}% Note that, to incorporate
 %the observed Higgs boson at 125 GeV, the $m_{h}^{mod+}$ scenario includes a h boson
 %at around 125 GeV with a much larger $\sigma \times$BR than the 1 TeV H and A, and this is
@@ -1480,7 +1523,8 @@ production. All channels and categories are combined.
 \subfloat[gg$\phi$]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_009-a.pdf}}
 \subfloat[bb$\phi$]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_009-b.pdf}}
 \end{center}
-\caption{Upper limits at 95\% CL for (a) the gluon fusion production
+\caption[Upper limits at 95\% CL for the gluon fusion production process and the
+b-associated production process, combining all final states and categories.]{Upper limits at 95\% CL for (a) the gluon fusion production
 process and (b) the b--associated production process. All four final states and 
 all categories are combined for these limits. The green and yellow bands indicate
 the $\pm 1\sigma$(68\%) and $\pm 2\sigma$(95\%) probability intervals on the expected limit \cite{CMS-PAS-HIG-16-037}.}
@@ -1507,7 +1551,8 @@ the other channels.
 \subfloat[gg$\phi$]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/mssm_hig16037_limitcomp_ggh.pdf}}
 \subfloat[bb$\phi$]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/mssm_hig16037_limitcomp_bbh.pdf}}
 \end{center}
-\caption{Expected upper limits at 95\% CL for (a) gluon fusion and (b) b--associated production,
+\caption[Comparison of expected upper limits at 95\% CL for gluon fusion and 
+b-associated production per channel.]{Expected upper limits at 95\% CL for (a) gluon fusion and (b) b--associated production,
 comparing the combination of all channels (green) with the \mutau (red), \etau (blue) \tautau (black)
 and \emu (gold) channels. For masses below 200 GeV the \mutau channel is the most sensitive,
 while the \tautau channel dominates for higher masses. The \etau channel is always
@@ -1538,7 +1583,7 @@ also indicates the current lack of sensitivity to the standard model Higgs boson
 \subfloat[gg$\phi$]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure-aux_005-a.pdf}}
 \subfloat[bb$\phi$]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure-aux_005-b.pdf}}
 \end{center}
-\caption{Upper limits at 95\% CL for (a) the gluon fusion production
+\caption[Upper limits at 95\% CL for the gluon fusion and b-associated production processes, with the 125 GeV Higgs boson included as one of the backgrounds.]{Upper limits at 95\% CL for (a) the gluon fusion production
 process and (b) the b--associated production process. The SM, 125 GeV Higgs boson
 is included as one of the backgrounds. All four final states and 
 all categories are combined for these limits. The light and dark green bands indicate
@@ -1564,7 +1609,9 @@ the fact that we cannot fully disentangle the two processes.
 \subfloat[$m_{\phi} = 1.6$ TeV]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/CMS-PAS-HIG-16-037_Figure_011-i.pdf}}
 \subfloat[$m_{\phi} = 3.2$ TeV]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/CMS-PAS-HIG-16-037_Figure_011-l.pdf}}
 \end{center}
-\caption{2D likelihood scans showing the best-fit value (black cross) for cross--section times branching ratio 
+\caption[2D likelihood scans showing the best-fit value for cross--section 
+times branching ratio of both the gluon fusion and b-associated production 
+processes.]{2D likelihood scans showing the best-fit value (black cross) for cross--section times branching ratio 
 of both the gluon fusion (x-axis) and b- associated production (y-axis) processes. The red diamond indicates the
 expected best fit point for the presence of a 125 GeV SM Higgs boson, and the purple bands indicate the 68\% and
 95\% confidence interval contours \cite{CMS-PAS-HIG-16-037}.}
@@ -1588,7 +1635,8 @@ limits at high \tanb~have been significantly improved, by around 300 GeV.
 \subfloat[$m_{h}^{\text{mod}+}$ scenario]{\includegraphics[width=0.65\textwidth]{./MSSM/Figures/CMS-PAS-HIG-16-037_Figure_012-a.pdf}}~\\
 \subfloat[hMSSM scenario]{\includegraphics[width=0.65\textwidth]{./MSSM/Figures/CMS-PAS-HIG-16-037_Figure_012-b.pdf}}
 \end{center}
-\caption{Exclusion in (a) the $m_{h}^{\text{mod}+}$ scenario and (b) the hMSSM scenario 
+\caption[Exclusion in the $m_{h}^{\text{mod+}}$ scenario and the hMSSM
+scenario of the \AHtotautau analysis.]{Exclusion in (a) the $m_{h}^{\text{mod}+}$ scenario and (b) the hMSSM scenario 
 obtained by the combination
 of all channels in the \AHtotautau analysis. The blue shaded area bounded by the 
 solid black line is the observed exclusion, with the dashed black line the
@@ -1648,7 +1696,8 @@ distributions for the signal region categories of the four channels are shown in
 \subfloat[No b-tag]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/htt_mt_8_hig16006_shapeshig16006_postfit_logy_logx.pdf}}
 \subfloat[B-tag]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/htt_mt_9_hig16006_shapeshig16006_postfit_logy_logx.pdf}}
 \end{center}
-\caption{Transverse component of the di-$\Pgt$ mass for expected backgrounds and
+\caption[Transverse component of the di-\Pgt mass for expected backgrounds
+and observed events in the no b-tag and b-tag categories of the \mutau channel.]{Transverse component of the di-$\Pgt$ mass for expected backgrounds and
 observed events in the (a) no b-tag and (b) b-tag categories of the \mutau channel.
 The signal overlaid corresponds to the signal of the three Higgs bosons at \mA=1 TeV and \tanb=50
 in the $m_{\text{h}}^{\text{mod+}}$ scenario, and so it peaks once at low mass, for the light Higgs boson,
@@ -1661,7 +1710,8 @@ and once at higher mass, for the heavy H and A.}
 \subfloat[No b-tag]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/htt_et_8_hig16006_shapeshig16006_postfit_logy_logx.pdf}}
 \subfloat[B-tag]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/htt_et_9_hig16006_shapeshig16006_postfit_logy_logx.pdf}}
 \end{center}
-\caption{Transverse component of the di-$\Pgt$ mass for expected backgrounds and
+\caption[Transverse component of the di-\Pgt mass for expected backgrounds
+and observed events in the no b-tag and b-tag categories of the \etau channel.]{Transverse component of the di-$\Pgt$ mass for expected backgrounds and
 observed events in the (a) no b-tag and (b) b-tag categories of the \etau channel.}
 %The signal overlaid corresponds to the signal of the three Higgs bosons at \mA=1 TeV and \tanb=50
 %in the $m_{\text{h}}^{\text{mod+}}$ scenario, and so it peaks once at low mass, for the light Higgs boson,
@@ -1674,7 +1724,9 @@ observed events in the (a) no b-tag and (b) b-tag categories of the \etau channe
 \subfloat[No b-tag]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/htt_tt_8_hig16006_shapeshig16006_postfit_logy_logx.pdf}}
 \subfloat[B-tag]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/htt_tt_9_hig16006_shapeshig16006_postfit_logy_logx.pdf}}
 \end{center}
-\caption{Transverse component of the di-$\Pgt$ mass for expected backgrounds and
+\caption[Transverse component of the di-\Pgt mass for expected backgrounds
+and observed events in the no b-tag and b-tag categories of the \tautau
+channel.]{Transverse component of the di-$\Pgt$ mass for expected backgrounds and
 observed events in the (a) no b-tag and (b) b-tag categories of the \tautau channel.}
 %The signal overlaid corresponds to the signal of the three Higgs bosons at \mA=1 TeV and \tanb=50
 %in the $m_{\text{h}}^{\text{mod+}}$ scenario, and so it peaks once at low mass, for the light Higgs boson,
@@ -1687,7 +1739,8 @@ observed events in the (a) no b-tag and (b) b-tag categories of the \tautau chan
 \subfloat[No b-tag]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/htt_em_8_hig16006_shapeshig16006_postfit_logy_logx.pdf}}
 \subfloat[B-tag]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/htt_em_9_hig16006_shapeshig16006_postfit_logy_logx.pdf}}
 \end{center}
-\caption{Transverse component of the di-$\Pgt$ mass for expected backgrounds and
+\caption[Transverse component of the di-\Pgt mass for expected backgrounds
+and observed events in the no b-tag and b-tag cateogires of the \emu channel.]{Transverse component of the di-$\Pgt$ mass for expected backgrounds and
 observed events in the (a) no b-tag and (b) b-tag categories of the \emu channel.}
 %The signal overlaid corresponds to the signal of the three Higgs bosons at \mA=1 TeV and \tanb=50
 %in the $m_{\text{h}}^{\text{mod+}}$ scenario, and so it peaks once at low mass, for the light Higgs boson,
@@ -1711,7 +1764,7 @@ at higher mass.
 \subfloat[gg$\phi$]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/Figure_006-a.pdf}}
 \subfloat[bb$\phi$]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/Figure_006-b.pdf}}
 \end{center}
-\caption{Upper limits at 95\% CL for (a) the gluon fusion production
+\caption[Upper limits at 95\% CL for the gluon fusion and b-associated production process.]{Upper limits at 95\% CL for (a) the gluon fusion production
 process and (b) the b--associated production process. All four final states and 
 all categories are combined for these limits. The green and yellow bands indicate
 the $\pm 1\sigma$(68\%) and $\pm 2\sigma$(95\%) probability intervals on the expected limit  \cite{CMS-PAS-HIG-16-006}.}
@@ -1723,7 +1776,8 @@ the $\pm 1\sigma$(68\%) and $\pm 2\sigma$(95\%) probability intervals on the exp
 \subfloat[gg$\phi$]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/mssm_hig16006_limitcomp_ggH.pdf}}
 \subfloat[bb$\phi$]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/mssm_hig16006_limitcomp_bbH.pdf}}
 \end{center}
-\caption{Expected upper limits at 95\% CL for (a) gluon fusion and (b) b--associated production,
+\caption[Expected upper limits at 95\% CL for the gluon fusion and b-associated
+production, comparing the combination of all channels with the per-channel limits.]{Expected upper limits at 95\% CL for (a) gluon fusion and (b) b--associated production,
 comparing the combination of all channels (green) with the \mutau (red), \etau (blue) \tautau (black)
 and \emu (gold) channels. For masses below 200 GeV the \mutau channel is the most sensitive,
 while the \tautau channel dominates for higher masses. The \etau channel is always
@@ -1884,7 +1938,8 @@ from the individual 2015 and 2016 limits.
 \subfloat[gg$\phi$]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/mssm_combination_090117_ggH_cmb.png}}
 \subfloat[bb$\phi$]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/mssm_combination_090117_bbH_cmb.png}}
 \end{center}
-\caption{Upper limits at 95\% CL for (a) the gluon fusion production
+\caption[Upper limits at 95\% CL for the gluon fusion and b-associated production
+process, obtained by combining all channels and categories of the 2015 nd the 2016 analyses.] {Upper limits at 95\% CL for (a) the gluon fusion production
 process and (b) the b--associated production process. These results
 combine all categories and all four final states from both the 2015
 and the 2016 analyses. The green and yellow bands indicate
@@ -1909,7 +1964,8 @@ effect is less visible on the b--associated production limits shown in figure \r
 \subfloat[gg$\phi$]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/mssm_combination_comparison_ggH_with_ratio.pdf}}
 \subfloat[bb$\phi$]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/mssm_combination_comparison_bbH_with_ratio.pdf}}
 \end{center}
-\caption{Comparison of the expected upper limits at 95\% CL for (a) the gluon fusion production
+\caption[Comparison of the expected upper limits at 95\% CL for the 
+gluon fusion and b-associated production process, comparing the 2015 and 2016 analyses with a combination.]{Comparison of the expected upper limits at 95\% CL for (a) the gluon fusion production
 process and (b) the b--associated production process. The green curve shows the results
 from combining the 2015 and 2016 analyses (integrated luminosity of 15.2 fb$^{-1}$),
 with the red line indicating the limits from the 2016 analysis only (integrated luminosity of 12.9 fb$^{-1}$)
