--- a/Objects/Objects.tex
+++ b/Objects/Objects.tex
@@ -80,7 +80,9 @@ associated with the vertex, as figure \ref{fig:objects_tracks_pvres} shows.
 \subfloat[Resolution in x]{\includegraphics[width=0.5\textwidth]{./Objects/Plots/PVResX.png}}
 \subfloat[Resolution in z]{\includegraphics[width=0.5\textwidth]{./Objects/Plots/PVResZ.png}}
 \end{center}
-\caption{Resolution of the x-- (a) and z--coordinate  (b)
+\caption[Resolution of the x- and z- coordinates of reconstructed
+primary vertices as a function of the scalar sum of the \pT s of the associated
+tracks.]{Resolution of the x-- (a) and z--coordinate  (b)
 of reconstructed primary vertices
 as a function of the scalar sum of the \pT s of the associated tracks, 
 measured in 2015 (blue triangles) and 2016 (red squares).
@@ -167,7 +169,8 @@ $1/E_{\text{SC}} - 1/p_{\Pe}$, where $E_{\text{SC}}$ is the energy in the superc
 \subfloat[$\sigma_{i\eta,i\eta}$]{\includegraphics[width=0.5\textwidth]{./Objects/Plots/Sigmaietaieta.png}}
 \subfloat[$1/E_{\text{SC}} - 1/p_{e}$]{\includegraphics[width=0.5\textwidth]{./Objects/Plots/OneoverEminOneoverp.png}}
 \end{center}
-\caption{$\sigma_{i\eta,i\eta}$ (a) and $1/E_{\text{SC}} - 1/p_{e}$ (b) for real (black points)  and 
+\caption[$\sigma_{i\eta,i\eta}$ and $1/E_{\text{SC}}-1/p_{e}$ for real 
+and misidentified electrons at 8 TeV, for data and MC]{$\sigma_{i\eta,i\eta}$ (a) and $1/E_{\text{SC}} - 1/p_{e}$ (b) for real (black points)  and 
 misidentified (yellow triangles) electrons in a dataset corresponding to 19.7 fb$^{-1}$
 taken at $\sqrt{s} = 8$ TeV, overlaid on the distributions for simulated 
 real electrons in purple \cite{cms-elereco-run1}.}
@@ -552,7 +555,7 @@ the large  $\Ptop \rightarrow \PW \Pbottom$ branching ratio. %Measurements
 \begin{figure}[h!]
 %\subfloat[CSVv2 distribution]{\includegraphics[width=0.6\textwidth]{./Objects/Plots/CSVDistributionMultijet.pdf}}\\
 \includegraphics[width=0.7\textwidth]{./Objects/Plots/CSVSF.png}
-\caption{%(a) distribution of CSVv2 discriminant for multijet events in 2.6 fb$^{-1}$ 
+\caption[The b--tagging scale factors and errors for b--jets in the data sample collected during 2015 as a function of jet \pT~for the medium working point of the CSVv2 discriminant.]{%(a) distribution of CSVv2 discriminant for multijet events in 2.6 fb$^{-1}$ 
 %collected at $\sqrt{s} = 13$ TeV and (b) 
 The b--tagging scale factors and errors for b--jets in the data sample collected during 2015
 as a function of jet \pT~for the medium working point of the CSVv2 discriminant \cite{cms-btag-run2}.}
@@ -603,7 +606,9 @@ constituents selected as the di--$\tau$ candidate.
 \subfloat[\MET~distribution in \Zmm events]{\includegraphics[width=0.5\textwidth]{./Objects/Plots/Met_Data.png}}
 \subfloat[\MET~resolution]{\includegraphics[width=0.5\textwidth]{./Objects/Plots/transverse_resolution_npv.png}}
 \end{center}
-\caption{(a) \MET~distributions comparing MVA \MET~(brown circles) to \ac{PF} \MET~ (black circles) for
+\caption[\MET~distributions comparing MVA \MET~to PF \MET~for
+\Zmm events, in a sample corresponding to 42 pb$^{-1}$ of data collected
+at $\sqrt{s}=13$ TeV.]{(a) \MET~distributions comparing MVA \MET~(brown circles) to \ac{PF} \MET~ (black circles) for
 \Zmm events, which contain no genuine \MET~, in a sample corresponding to 42 pb$^{-1}$ of data collected at $\sqrt{s}=$\mbox{13 TeV}. The \MET~
 values for MVA \MET~ are lower than for \ac{PF} \MET. (b) the \MET~ resolution for \ac{PF} \MET~ in blue and MVA \MET~ in red/brown
 circles, as a function of number of vertices. The MVA \MET~ resolution is more stable with increased pile--up \cite{cms-dp-mvamet}.}
@@ -835,7 +840,10 @@ figures \ref{fig:tau_efficiency}b and c, respectively.
 \subfloat[Real $\Pgt_{h}$ efficiency for anti-electron discriminator]{\includegraphics[width=0.5\textwidth]{./Objects/Plots/TauEfficiencyEle.pdf}}
 \subfloat[$\Pe\rightarrow\Pgt_{h}$ fake rate for the anti-electron discriminator]{\includegraphics[width=0.5\textwidth]{./Objects/Plots/TauMisIDEle.pdf}}
 \end{center}
-\caption{(a) the jet$\rightarrow\Pgt_{h}$ fake rate in QCD \ac{MC} events versus $\Pgt_{h}$ identification
+\caption[Figures of the jet$\rightarrow\Pgt_{h}$ fake rate in QCD MC events
+versus $\Pgt_{h}$ identification efficiency for \htotautau MC events, the real
+$\Pgt_{h}$ identification efficiecny for different working points of the anti-electron discriminator, and the $\Pe\rightarrow\Pgt_{h}$ fake rate for different
+working points of the anti-electron discriminator.]{(a) the jet$\rightarrow\Pgt_{h}$ fake rate in QCD \ac{MC} events versus $\Pgt_{h}$ identification
 efficiency for \htotautau \ac{MC} events, comparing the MVA-based isolation discriminator in red with the cut-based 
 isolation discriminator in pink. Tighter working points give lower hadronic tau identification
 efficiencies and lower fake rates, and for the same $\Pgt_{h}$ identification efficiency the fake rate
