--- a/Theory/Theory.tex
+++ b/Theory/Theory.tex
@@ -307,7 +307,7 @@ the individual experiments did not reach a significance upwards of 5$\sigma$ in 
 \subfloat[W/Z associated production]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/feynman_VH.pdf}}
 \subfloat[\ttbar associated production]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/feynman_ttH.pdf}}
 \end{center}
-\caption{Tree-level Feynman diagrams for the dominant Higgs boson production modes at
+\caption[Tree-level Feynman diagrams for the dominant Higgs production modes at the LHC]{Tree-level Feynman diagrams for the dominant Higgs boson production modes at
 the \ac{LHC}.}
 \label{fig:theory_smhprod}
 \end{figure}
@@ -325,7 +325,7 @@ of the \ac{SM} background.
 \subfloat[\ac{SM} H production cross sections]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/plot_13tev_H_sqrt.pdf}}
 \subfloat[\ac{SM} H branching ratios]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/SMHiggsBRYR4-square.pdf}}
 \end{center}
-\caption{(a) \ac{SM} Higgs boson production cross sections at $\sqrt{s} = 13$ TeV and (b) \ac{SM}
+\caption[SM Higgs boson production cross sections at $\sqrt{s}=13$ TeV and SM Higgs boson branching ratios, for Higgs boson masses between 120 and 130 GeV]{(a) \ac{SM} Higgs boson production cross sections at $\sqrt{s} = 13$ TeV and (b) \ac{SM}
 Higgs boson branching ratios, for Higgs boson masses between 120 and 130 GeV \cite{YR4}.}
 \label{fig:theory_smhxsbr}
 \end{figure}
@@ -504,7 +504,7 @@ given in table \ref{tab:mssm_couplings} \cite{YR4}.
 \begin{table}[htp]
 \label{tab:mssm_couplings}
 \begin{center}
-\caption{Tree-level couplings in the MSSM, as multiplicative factors with
+\caption[Tree-level couplings in the MSSM, as multiplicative factors with respect to the couplings of the Higgs boson in the SM]{Tree-level couplings in the MSSM, as multiplicative factors with
 respect to the couplings of the Higgs boson in the \ac{SM}.}
 \begin{tabular}{p{2cm}p{4cm}p{4cm}p{4cm}}
 \toprule
@@ -574,8 +574,8 @@ bottom quark fusion. The tree-level Feynman diagram for this process is shown in
 \subfloat[gluon fusion production]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/CMS-PAS-HIG-16-037_Figure_001-a.png}}
 \subfloat[b-associated production]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/CMS-PAS-HIG-16-037_Figure_001-b.pdf}}
 \end{center}
-\caption{Tree-level Feynman diagrams of (a) gluon fusion production and (b) b-associated
-production of neutral Higgs boson in the MSSM \cite{CMS-PAS-HIG-16-037}.}
+\caption[Tree-level Feynman diagrams of gluon fusion and b-associated production of neutral Higgs bosons in the MSSM]{Tree-level Feynman diagrams of (a) gluon fusion production and (b) b-associated
+production of neutral Higgs bosons in the MSSM \cite{CMS-PAS-HIG-16-037}.}
 \label{fig:production_mssm}
 \end{figure}
 
@@ -621,7 +621,7 @@ and decay are enhanced for $250\leq m_{\PHiggs}\leq 350$ GeV and $220 \leq m_{\P
 \subfloat[\PHiggs]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/typeII2HDMxsbr.png}}
 \subfloat[\PHiggsps]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/typeII2HDMxsbrA.png}}
 \end{center}
-\caption{Inclusive production cross--section times branching ratio for an example
+\caption[Inclusive production cross--section times branching ratio for an example of a type-II 2HDM, for the \PHiggs and \PHiggsps boson.]{Inclusive production cross--section times branching ratio for an example
 of a type-II \ac{2HDM}, for (a) the \PHiggs boson and (b) the \PHiggsps boson. The
 top figures use \tanb=1 and $\cos{(\beta-\alpha)}=-0.11$, the bottom
 figures are made for \tanb=10 and $\cos{(\beta-\alpha)}=-0.02$. At low \tanb~the \Htohh and
@@ -714,7 +714,8 @@ is similar.
 \subfloat[$\sigma(gg\rightarrow \PHiggs)$]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/xs_ggH_mhmodp.pdf}}
 \subfloat[$\sigma(gg\rightarrow bb\PHiggs)$]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/xsbbH4F_mhmodp.pdf}}
 \end{center}
-\caption{Production cross--section of (a) gluon fusion production and (b) b--associated production of the \PHiggs boson
+\caption[Production cross--sections of  gluon fusion and b--associated
+production of the \PHiggs boson in the $m_{h}^{\text{mod+}}$ scenario.]{Production cross--section of (a) gluon fusion production and (b) b--associated production of the \PHiggs boson
 in the $m_{h}^{\text{mod+}}$ scenario. The gluon fusion production cross section is larger at low \tanb, while
 the b-associated production cross-section is larger at high \tanb.}
 \label{fig:mhmodp_xs}
@@ -729,7 +730,7 @@ high \tanb, showing how this decay channel is useful for MSSM Higgs boson search
 \subfloat[BR($\PHiggs \rightarrow \tau\tau$)]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/brHtautau_mhmodp.pdf}}
 \subfloat[BR($\PHiggsps \rightarrow \tau\tau$)]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/brAtautau_mhmodp.pdf}}
 \end{center}
-\caption{Branching ratio of (a) \PHiggs and (b) \PHiggsps into $\tau\tau$. The branching
+\caption[Branching ratio of \PHiggs and \PHiggsps into $\tau\tau$.]{Branching ratio of (a) \PHiggs and (b) \PHiggsps into $\tau\tau$. The branching
 ratios into $\tau\tau$ are enhanced at high \tanb.}
 \label{fig:mhmodp_br}
 \end{figure}
@@ -785,7 +786,8 @@ Figure \ref{fig:mhmodp_mh}b shows that, apart from in a corner of \tanb~1-4 and
 \subfloat[$m_{h}^{\text{mod}+}$ scenario]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/mh_mhmodp.pdf}}
 \subfloat[low \tanb~scenario]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/mh_lowtbhigh.pdf}}
 \end{center}
-\caption{The mass of the light Higgs boson, \mh, as a function 
+\caption[The mass of the light Higgs boson, \mh, as a function of \mA~and
+\tanb~in the $m_{h}^{\text{mod+}}$ scenario and the low \tanb~scenario.]{The mass of the light Higgs boson, \mh, as a function 
 of \mA~and \tanb~in (a) the $m_{h}^{\text{mod+}}$ scenario and (b) the low \tanb~scenario. The white areas
 indicate masses lower than 122 GeV. The figures shows that
 the mass of the light Higgs boson is compatible with 125 GeV over a large
@@ -826,7 +828,7 @@ can be sensitive in this scenario. %REPHRASE
 \subfloat[\Htohh]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/lowtbhigh_hhbr.png}}
 \subfloat[\AtoZh]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/lowtbhigh_azhbr.png}}
 \end{center}
-\caption{Branching fractions of (a) \Htohh and (b) \AtoZh in the low-\tanb~scenario, indicating 
+\caption[Branching fractions of \Htohh and \AtoZh in the low-\tanb~scenario.]{Branching fractions of (a) \Htohh and (b) \AtoZh in the low-\tanb~scenario, indicating 
 areas where both are significantly enhanced \cite{MSSM-lowtanb}.}
 \label{fig:lowtbhigh_br}.
 \end{figure}
@@ -947,7 +949,7 @@ various final states, have been performed. %As more data are collected during Ru
 \subfloat[$m_{h}^{\text{mod+}}$ scenario]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/CMS-PAS-HIG-16-007_Figure_003-a.pdf}}
 \subfloat[hMSSM scenario]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/CMS-PAS-HIG-16-007_Figure_003-b.pdf}}
 \end{center}
-\caption{Summary of the interpretations of Run 1 \ac{BSM} Higgs searches at \acs{CMS} in (a) the $m_{h}^{\text{mod+}}$ and (b) the
+\caption[Summary of the interpretations of Run 1 BSM Higgs searches at CMS in the $m_{h}^{\text{mod+}} scenario and the hMSSM scenario.]{Summary of the interpretations of Run 1 \ac{BSM} Higgs searches at \acs{CMS} in (a) the $m_{h}^{\text{mod+}}$ and (b) the
 hMSSM scenario. The different coloured areas indicate the observed and expected exclusion from different searches in these
 scenarios. The results from \ac{MSSM} Higgs searches with decays into $\tau$ leptons are shown in blue and exclude more of the parameter
 space than any of the other searches. The \ac{MSSM} Higgs to $b\bar{b}$ (cyan) and Higgs to $\mu\mu$ (yellow) searches are also sensitive in part
