--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -1,11 +1,20 @@
 %% Title
-\titlepage[Imperial College London]{%
+\titlepage[Imperial College London\\ Department of Physics]{
   A dissertation submitted to Imperial College London\\ for the degree of Doctor of Philosophy}
 
+\begin{abstract}[]
+The copyright of this thesis rests with the author and is made available under a
+Creative Commons Attribution Non-Commercial No Derivatives licence. Researchers
+are free to copy, distribute or transmit the thesis on the condition that they
+attribute it, that they do not use it for commercial purposes and that they do
+not alter, transform or build upon it. For any reuse or redistribution,
+researchers must make clear to others the licence terms of this work.
+\end{abstract}
 %% Abstract
-%\begin{abstract}%[\smaller \thetitle\\ \vspace*{1cm} \smaller {\theauthor}]
+\begin{abstract}%[\smaller \thetitle\\ \vspace*{1cm} \smaller {\theauthor}]
+The BLAH BLAH
   %\thispagestyle{empty}
-%\end{abstract}
+\end{abstract}
 
 
 %% Declaration
